workspace-sf/force-app/main/default/objects/RemuneracaoProduto__c/RemuneracaoProduto__c.object-meta.xml
<CustomObject>
    <description>Objeto de relacionamento entre o produto e o tipo de remuneração</description>
    <label>Remuneração do produto</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Número</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Remunerações do produto</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>