workspace-sf/force-app/main/default/objects/RemuneracaoProduto__c/fields/ParcelasAgenciamento__c.field-meta.xml
<CustomField>
    <fullName>ParcelasAgenciamento__c</fullName>
    <label>Parcelas de agenciamento</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1ª parcela</fullName>
            </value>
            <value>
                <fullName>2ª parcela</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>