workspace-sf/force-app/main/default/objects/RemuneracaoProduto__c/fields/TipoEvento__c.field-meta.xml
<CustomField>
    <fullName>TipoEvento__c</fullName>
    <label>Tipo de evento</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Endosso</fullName>
            </value>
            <value>
                <fullName>Renovação</fullName>
            </value>
            <value>
                <fullName>Seguro novo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>