workspace-sf/force-app/main/default/objects/RemuneracaoProduto__c/validationRules/ValidarLimiteMaximoTecnico.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidarLimiteMaximoTecnico</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    $Profile.Name &lt;&gt; &apos;Administrador do sistema&apos;,
    NOT(ISBLANK(LimiteMaximo__c)),
    LimiteMaximo__c &gt; RemuneracaoProduto__r.LimiteMaximo__c 
)</errorConditionFormula>
    <errorDisplayField>LimiteMaximo__c</errorDisplayField>
    <errorMessage>O limite máximo deve respeitar o limite cadastrado no produto técnico</errorMessage>
</ValidationRule>