workspace-sf/force-app/main/default/objects/RemuneracaoProduto__c/validationRules/ValidarLimiteMaximoTipoRemuneracao.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidarLimiteMaximoTipoRemuneracao</fullName>
    <active>true</active>
    <description>Verifica se o limite máximo está de acordo com o informado no limite máximo do tipo de remuneração</description>
    <errorConditionFormula>LimiteMaximo__c  &gt;  TipoRemuneracao__r.LimiteMaximo__c</errorConditionFormula>
    <errorDisplayField>LimiteMaximo__c</errorDisplayField>
    <errorMessage>O limite máximo deve respeitar o limite cadastrado no tipo de remuneração</errorMessage>
</ValidationRule>