workspace-sf/force-app/main/default/objects/RemuneracaoProduto__c/validationRules/ValidarLimiteMinimoMaximo.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidarLimiteMinimoMaximo</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK(LimiteMinimo__c)),
    NOT(ISBLANK(LimiteMaximo__c)),
    LimiteMinimo__c &gt; LimiteMaximo__c 
)</errorConditionFormula>
    <errorMessage>O limite mínimo deve ser inferior ao limite máximo</errorMessage>
</ValidationRule>