workspace-sf/force-app/main/default/objects/RemuneracaoProduto__c/validationRules/ValidarLimiteMinimoTecnico.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidarLimiteMinimoTecnico</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    $Profile.Name &lt;&gt; &apos;Administrador do sistema&apos;,
    NOT(ISBLANK(LimiteMinimo__c)),
    LimiteMinimo__c &lt; RemuneracaoProduto__r.LimiteMinimo__c 
)</errorConditionFormula>
    <errorDisplayField>LimiteMinimo__c</errorDisplayField>
    <errorMessage>O limite mínimo deve respeitar o limite cadastrado no produto técnico</errorMessage>
</ValidationRule>