workspace-sf/force-app/main/default/objects/RemuneracaoProduto__c/validationRules/ValidarLimiteMinimoTipoRemuneracao.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidarLimiteMinimoTipoRemuneracao</fullName>
    <active>true</active>
    <description>Verifica se o limite mínimo está  de acordo com o informado no limite mínimo  do tipo de remuneração</description>
    <errorConditionFormula>LimiteMinimo__c   &lt;  TipoRemuneracao__r.LimiteMinimo__c</errorConditionFormula>
    <errorDisplayField>LimiteMinimo__c</errorDisplayField>
    <errorMessage>O limite mínimo deve respeitar o limite cadastrado no tipo de remuneração</errorMessage>
</ValidationRule>