workspace-sf/force-app/main/default/objects/RemuneracaoProduto__c/validationRules/ValidarParcelasAgenciamento.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidarParcelasAgenciamento</fullName>
    <active>true</active>
    <description>Verifica a necessidade de se preencher as parcelas de agenciamento</description>
    <errorConditionFormula>AND(UPPER(TipoRemuneracao__r.Name) = &apos;AGENCIAMENTO&apos;, 	ISNULL(ParcelasAgenciamento__c))</errorConditionFormula>
    <errorDisplayField>ParcelasAgenciamento__c</errorDisplayField>
    <errorMessage>Para o Tipo de remuneração &apos;AGENCIAMENTO&apos;, é necessário preencher o campo Parcelas de Agenciamento.</errorMessage>
</ValidationRule>