workspace-sf/force-app/main/default/objects/RemuneracaoProduto__c/validationRules/ValidarTipoRemuneracaoDiferenteAgenciam.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidarTipoRemuneracaoDiferenteAgenciam</fullName>
    <active>true</active>
    <description>Verifica a necessidade de se preencher as parcelas de agenciamento</description>
    <errorConditionFormula>AND(UPPER(TipoRemuneracao__r.Name) &lt;&gt; &apos;AGENCIAMENTO&apos;, 	NOT(ISNULL(ParcelasAgenciamento__c)))</errorConditionFormula>
    <errorDisplayField>ParcelasAgenciamento__c</errorDisplayField>
    <errorMessage>Somente é possível preencher o campo Parcelas de agenciamento, para Tipo de remuneração &apos;AGENCIAMENTO&apos;.</errorMessage>
</ValidationRule>